links vistas corregidas, wupalmer con texto en ingles, home dos con lista corregida

--- a/ProyectoPINGESO-web/src/main/webapp/home2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/home2.xhtml
@@ -80,24 +80,17 @@
                         <p align="justify">biological indices "Quality indices generator" (QIG) is an application for calculation of biological indices, open to the scientific community.</p>
                         <br/>
                         <div class="well">
-                            <center><h3><p>Biological Indices</p></h3></center>
+                            <center><h4><p>Biological Indices</p></h4></center>
                             <hr style="border: 0.007rem #777 solid"/>
-                            <div class="col-lg-4">
-                                <h4><a href="faces/wupalmer.xhtml"> Wu-Palmer </a></h4>
-                                <hr/>
-                            </div>
-                            <div class="col-lg-4">
-                                <h4><a href="faces/tbk.xhtml"> T.B.K. </a></h4>
-                                <hr id="hr"/>
-                            </div>
-                            <div class="col-lg-4">
-                                <h4><a href="faces/leacockChodorow.xhtml"> Leacock-Chodorow </a></h4>
-                                <hr id="hr"/>
+                            <ul class="list-group">
+                                <a class="list-group-item" href="faces/wupalmer.xhtml" >Wu-Palmer</a>
+                                <a class="list-group-item" href="faces/tbk.xhtml">TBK</a>
+                                <a class="list-group-item" href="faces/leacockChodorow.xhtml">Leacock-Chodorow</a>
+                                
+                            </ul>
 
-                                <!--<img src="Recursos/img/usach.png" alt="Wu-palmer" class="img-thumbnail" width="75"/>-->
-                            </div>
                             <br/><br/><br/><br/><br/><br/>                            
-                           
+
                         </div>
                     </div>    
                     <div class="col-lg-2"></div>
