--- a/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
@@ -40,7 +40,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand whiteColor" href="home2.xhtml" style="color:#fff;"><i class="glyphicon glyphicon-home"/></a>
+                            <a class="navbar-brand whiteColor" href="faces/home2.xhtml" style="color:#fff;"><i class="glyphicon glyphicon-home"/></a>
                         </div>
                         <div class="collapse navbar-collapse bs-example-js-navbar-collapse">
                             <ul class="nav navbar-nav">
@@ -67,7 +67,7 @@
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li id="fat-menu" class="dropdown">
-                                    <a id="drop3" href="aboutus.xhtml" class="whiteColor"  aria-haspopup="true" role="button" aria-expanded="false" style="color:#fff;">
+                                    <a id="drop3" href="faces/aboutus.xhtml" class="whiteColor"  aria-haspopup="true" role="button" aria-expanded="false" style="color:#fff;">
                                         <span><i class="glyphicon glyphicon-info-sign whiteColor"/></span> About us
                                     </a>
                                 </li>
