--- a/ProyectoPINGESO-web/src/main/webapp/wupalmer.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/wupalmer.xhtml
@@ -31,7 +31,8 @@
                                 </div>
                                 <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body">
-                                        El índice de WU-APLMER propone una representación semántica de genes a través de una estructura jerárquica (árbol genético), la que permite calcular la similitud semántica entre pares de ellos. La similitud de dos genes se define por cuan cercanos estén relacionados dentro de la jerarquía. 
+                                        The WU-PALMER indice proposes a semantic representation of genes through a hierarchical structure (genetic tree), which allows us to calculate the semantic similarity between pairs. The similarity of two genes is defined by how close they are related in the hierarchy. For this the tree of GeneOntology is used, in specific biological processes.
+
 
                                     </div>
                                 </div>
