Agilizado el LC, y arreglo en salidas

--- a/ProyectoPINGESO-web/src/main/webapp/leacockChodorow.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/leacockChodorow.xhtml
@@ -62,7 +62,7 @@
                                     </p:fileUpload> 
                                 </h:panelGrid>
                                 <br/>
-                                <p:commandButton styleClass="some-button2" value="Calculate Leacock-Chodorow" actionListener="#{fileUploadManagedBean.calcularIndiceTBK()}" icon="ui-icon-calculator" update="resultado"/>
+                                <p:commandButton styleClass="some-button2" value="Calculate Leacock-Chodorow" actionListener="#{fileUploadManagedBean.calcularIndiceLC()}" icon="ui-icon-calculator" update="resultado"/>
                                 <br></br><br></br>
                                 <h:inputText id="resultado" value="#{fileUploadManagedBean.output}" style="display:none;"/>
                                 <p:commandButton id="descargaaar" value="Download Results" ajax="false" style="display:none;">
