agregue un howtouse

--- a/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
@@ -60,7 +60,7 @@
                                     </ul>
                                 </li>
                                 <li class="dropdown">
-                                    <a id="drop2" href="#" class="dropdown-toggle whiteColor" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" style="color:#fff;">
+                                    <a id="drop2" href="faces/howtouse.xhtml" class="whiteColor" aria-haspopup="true" role="button" aria-expanded="false" style="color:#fff;">
                                         <span><i class="glyphicon glyphicon-question-sign whiteColor"/></span> How to use
                                     </a>
                                 </li>
