how to use modificado con imagenes

--- a/ProyectoPINGESO-web/src/main/webapp/tbk.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/tbk.xhtml
@@ -28,8 +28,12 @@
                                 </div>
                                 <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body">
-                                        <p align="justify">El enfoque de la similitud de WU-Palmer  no considera que dos nodos están en una misma jerarquía cuando están en un mismo nivel de profundidad dentro del árbol como respecto al nodo raíz, y en una misma vecindad  (variación del concepto de vecindad) cuando no están en una misma jerarquía, y además uno no es ancestro o descendiente del otro. 
-                                        Con el objetivo de equilibrar esa consideración, se propone una medida de similitud basada en el conteo de aristas que es una variación de la presentada por WU-Palmer, manteniendo así sus ventajas de simplicidad del cálculo y alto rendimiento, al agregar un factor que penaliza la similitud entre dos nodos de una misma vecindad. El enfoque se crea para enfrentar el problema de identificación semántica. </p>
+                                        <p align="justify">
+                                        The approach of similarity of WU-PALMER does not consider that two nodes are in the same hierarchy when they are in a same level of depth in the tree regarding the root node, and in a same vicinity (variation of the concept of vicinity) when they are not in the same hierarchy, and also one is not an ancestor or descendant of the other.
+                                        With the objective of balancing this consideration, a measure of similarity based on the count of edges, which is a variation of the one presented by WU-PALMER, is proposed, maintaining like this the advantage of the simplicity of it calculation and high performance, by adding a factor that penalizes the similarity between two nodes of the same vicinity. The approach is created to face the problem of semantic identification.
+   
+                                            
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -43,8 +47,11 @@
                                 </div>
                                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body">
-                                        <p align="justify">El enfoque de la similitud de WU-Palmer  no considera que dos nodos están en una misma jerarquía cuando están en un mismo nivel de profundidad dentro del árbol como respecto al nodo raíz, y en una misma vecindad  (variación del concepto de vecindad) cuando no están en una misma jerarquía, y además uno no es ancestro o descendiente del otro. 
-                                        Con el objetivo de equilibrar esa consideración, se propone una medida de similitud basada en el conteo de aristas que es una variación de la presentada por WU-Palmer, manteniendo así sus ventajas de simplicidad del cálculo y alto rendimiento, al agregar un factor que penaliza la similitud entre dos nodos de una misma vecindad. El enfoque se crea para enfrentar el problema de identificación semántica. </p>
+                                        <p align="justify">
+                                            The approach of similarity of WU-PALMER does not consider that two nodes are in the same hierarchy when they are in a same level of depth in the tree regarding the root node, and in a same vicinity (variation of the concept of vicinity) when they are not in the same hierarchy, and also one is not an ancestor or descendant of the other.
+                                            With the objective of balancing this consideration, a measure of similarity based on the count of edges, which is a variation of the one presented by WU-PALMER, is proposed, maintaining like this the advantage of the simplicity of it calculation and high performance, by adding a factor that penalizes the similarity between two nodes of the same vicinity. The approach is created to face the problem of semantic identification.
+
+                                        </p>
 
                                     </div>
                                 </div>
