corrección de howtouse, links redireccionan sin salir de la página, link a geneontology

--- a/ProyectoPINGESO-web/src/main/webapp/home2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/home2.xhtml
@@ -96,7 +96,7 @@
                     <div class="col-lg-8">
 
                         <h2><b>Welcome to Quality Indices Generator</b></h2>
-                        <h4><b><i>Based on GeneOntology <span><img src="Recursos/GO.png"/></span> </i></b></h4>
+                        <h4><b><i>Based on <a href="http://geneontology.org/" target="_blank">GeneOntology</a> <span><img src="Recursos/GO.png"/></span> </i></b></h4>
                         <hr id="hr"/>
                         <br/><br/><br/>
                         <p align="justify">biological indices "Quality indices generator" (QIG) is an application for calculation of biological indices, open to the scientific community.</p>
