--- a/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
@@ -106,7 +106,7 @@
                   <footer id="footer" style="border-top:1px #ccc solid">
                         <p class="navbar-text navbar-right" style="margin-right: 20px;"><img src="Recursos/img/usach.png" alt="University of Santiago" width="40"/></p>
                         <br/>
-                        <p class="navbar-text navbar-center">Developed by AppSolution, <a href="http://www.usach.cl" class="navbar-link">University of Santiago, Chile. </a> <span class="copyright">BIQ @2014</span></p>
+                        <p class="navbar-text navbar-center">Developed by AppSolution, <a href="http://www.usach.cl" target="_blank" class="navbar-link">University of Santiago, Chile. </a> <span class="copyright">BIQ @2014</span></p>
 
 
                         <br/>    
